--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  qr-store-forwarder:
+  applinkr:
     image: schech1/applinkr:latest
     ports:
       - "5001:5001"
