--- a/.github/workflows/develop-docker-build.yml
+++ b/.github/workflows/develop-docker-build.yml
@@ -3,12 +3,12 @@ name: Build and Push Development Docker Image
 on:
   push:
     branches:
-      - develop
+      - development
     paths-ignore:
       - '**.md'
   pull_request:
     branches:
-      - develop
+      - development
 
 jobs:
   build:
